-Fix for button color in dark mode

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -175,6 +175,7 @@
   font-size: 2vh;
   border-radius: 5px;
   background-color: transparent;
+  color: white;
   // color: white !important;
   // animation: backgroundColor 3s infinite;
   // animation-fill-mode: forwards;
